--- a/Halo5Stats/Weapons.storyboard
+++ b/Halo5Stats/Weapons.storyboard
@@ -377,5 +377,49 @@
             </objects>
             <point key="canvasLocation" x="2121" y="538"/>
         </scene>
+        <!--Weapons Filter View Controller-->
+        <scene sceneID="3Nf-03-GnC">
+            <objects>
+                <viewController storyboardIdentifier="WeaponsFilterViewController" id="mIq-c9-k71" customClass="WeaponsFilterViewController" customModule="H5S" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="oKb-MG-gRR"/>
+                        <viewControllerLayoutGuide type="bottom" id="cpi-pd-wid"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="gyG-eZ-61A">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Vhc-2e-Src">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="none" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="FilterCell" id="owm-bE-FsJ">
+                                        <rect key="frame" x="0.0" y="28" width="600" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="owm-bE-FsJ" id="dSR-bK-eyz">
+                                            <rect key="frame" x="0.0" y="0.0" width="600" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="cpi-pd-wid" firstAttribute="top" secondItem="Vhc-2e-Src" secondAttribute="bottom" id="9cD-Y0-UGM"/>
+                            <constraint firstItem="Vhc-2e-Src" firstAttribute="top" secondItem="oKb-MG-gRR" secondAttribute="bottom" id="lV5-7R-bvf"/>
+                            <constraint firstItem="Vhc-2e-Src" firstAttribute="leading" secondItem="gyG-eZ-61A" secondAttribute="leading" id="mWC-bF-BrZ"/>
+                            <constraint firstAttribute="trailing" secondItem="Vhc-2e-Src" secondAttribute="trailing" id="so1-An-q8y"/>
+                        </constraints>
+                    </view>
+                    <nil key="simulatedStatusBarMetrics"/>
+                    <connections>
+                        <outlet property="tableView" destination="Vhc-2e-Src" id="wzw-HR-Tyq"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="OW5-2u-Nx2" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2121" y="1203"/>
+        </scene>
     </scenes>
 </document>
